[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/BuzzyBeetle.gd" type="Script" id=1]
[ext_resource path="res://Enemies/gfxBuzzy/squished.png" type="Texture" id=2]
[ext_resource path="res://Enemies/gfxBuzzy/dead.png" type="Texture" id=3]
[ext_resource path="res://Enemies/gfxBuzzy/kicked0.png" type="Texture" id=4]
[ext_resource path="res://Enemies/gfxBuzzy/kicked1.png" type="Texture" id=5]
[ext_resource path="res://Enemies/gfxBuzzy/kicked2.png" type="Texture" id=6]
[ext_resource path="res://Enemies/gfxBuzzy/walk0.png" type="Texture" id=7]
[ext_resource path="res://Enemies/gfxBuzzy/walk1.png" type="Texture" id=8]
[ext_resource path="res://Enemies/EnemyVisibilityNotifier.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "squished",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "kicked",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]

[node name="BuzzyBeetle" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 81
script = ExtResource( 1 )

[node name="KinematicCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.6, 0.6 )
shape = SubResource( 1 )

[node name="FlatOnTop" type="KinematicBody2D" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 0.9, 0.4 )
collision_layer = 0
collision_mask = 0

[node name="FlatToStand" type="CollisionShape2D" parent="FlatOnTop"]
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 3.0

[node name="BuzzyBeetleSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "walk"
playing = true

[node name="enemie_hitbox" type="Area2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.8, 0.6 )
collision_layer = 8
collision_mask = 10

[node name="hitbox_collision" type="CollisionShape2D" parent="enemie_hitbox"]
shape = SubResource( 3 )

[node name="SquishedTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 6.0

[node name="InvincibleToPlayerAfterKick" type="Timer" parent="."]
process_mode = 0
wait_time = 0.33

[node name="BlockHitRight1" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
rotation = 4.71239
scale = Vector2( 1, 0.2 )
enabled = true
collide_with_areas = true
collide_with_bodies = false

[node name="BlockHitRight2" type="RayCast2D" parent="."]
position = Vector2( 8, -4 )
rotation = 4.71239
scale = Vector2( 1, 0.2 )
enabled = true
collide_with_areas = true
collide_with_bodies = false

[node name="BlockHitLeft1" type="RayCast2D" parent="."]
position = Vector2( -8, -4 )
rotation = 1.5708
scale = Vector2( 1, 0.2 )
enabled = true
collide_with_areas = true
collide_with_bodies = false

[node name="BlockHitLeft2" type="RayCast2D" parent="."]
position = Vector2( -8, 8 )
rotation = 1.5708
scale = Vector2( 1, 0.2 )
enabled = true
collide_with_areas = true
collide_with_bodies = false

[node name="EnemyVisibilityNotifier" parent="." instance=ExtResource( 9 )]
[connection signal="area_entered" from="enemie_hitbox" to="." method="_on_enemie_hitbox_area_entered"]
[connection signal="timeout" from="SquishedTimer" to="." method="_on_SquishedTimer_timeout"]
[connection signal="timeout" from="InvincibleToPlayerAfterKick" to="." method="_on_InvincibleToPlayerAfterKick_timeout"]
